Bug 410997 - Ctrl + mouse wheel doesn’t zoom the key strokes swatch
Summary: Ctrl + mouse wheel doesn’t zoom the key strokes swatch
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-16 21:01 UTC by Karl Ove Hufthammer
Modified: 2021-06-01 13:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2019-08-16 21:01:14 UTC
SUMMARY
According to the documentation (https://docs.krita.org/en/reference_manual/tools/colorize_mask.html), ‘[y]ou can increase the [key strokes] swatch size by hovering over it with the mouse, and doing Ctrl + mousescroll’. However, this doesn’t work.


STEPS TO REPRODUCE
1. Select the ‘Colorize Mask Editing Tool’.
2. Draw at least a key stroke.
3. Use ‘Ctrl + scroll wheel’ on the ‘Key Strokes’ swatch.

OBSERVED RESULT
They swatch is scrolled up/down.

EXPECTED RESULT
The swatch should be zoomed in/out.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20190814
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Comment 1 Halla Rempt 2019-08-27 12:30:10 UTC
Hi Karl,

I can confirm the issue. This ability got lost with the last palette view rewrite :-(
Comment 2 Tiar 2021-03-27 20:23:56 UTC
It's also too small (at least on 4k screen) and it unnecessarily contains multiple rows (which is a problem especially when you squish the Tool Options docker to be quite small, so there is only one or two rows and it's quite difficult to navigate there and it looks unpleasant) (instead it could grow when needed).
Comment 3 Dmitry Kazakov 2021-05-06 11:41:17 UTC
Git commit 85a56e591fe4c7fc564bf173fb13f2a7761592eb by Dmitry Kazakov.
Committed on 06/05/2021 at 11:41.
Pushed by dkazakov into branch 'master'.

Fix zooming of the palette in Lazy Fill Tool

The feature was lost when refactoring the palettes

M  +2    -2    libs/pigment/resources/KoColorSet.cpp
M  +8    -0    libs/widgets/KisPaletteModel.cpp
M  +1    -0    libs/widgets/KisPaletteModel.h
M  +40   -2    plugins/tools/tool_lazybrush/kis_tool_lazy_brush_options_widget.cpp
M  +2    -0    plugins/tools/tool_lazybrush/kis_tool_lazy_brush_options_widget.h

https://invent.kde.org/graphics/krita/commit/85a56e591fe4c7fc564bf173fb13f2a7761592eb
Comment 4 Dmitry Kazakov 2021-06-01 13:14:48 UTC
Git commit 6ec4be13d75898a9e718eb95b09bb9c9bdf055bd by Dmitry Kazakov.
Committed on 01/06/2021 at 12:00.
Pushed by dkazakov into branch 'krita/4.3'.

Fix zooming of the palette in Lazy Fill Tool

The feature was lost when refactoring the palettes

M  +2    -2    libs/pigment/resources/KoColorSet.cpp
M  +8    -0    libs/widgets/KisPaletteModel.cpp
M  +1    -0    libs/widgets/KisPaletteModel.h
M  +40   -2    plugins/tools/tool_lazybrush/kis_tool_lazy_brush_options_widget.cpp
M  +2    -0    plugins/tools/tool_lazybrush/kis_tool_lazy_brush_options_widget.h

https://invent.kde.org/graphics/krita/commit/6ec4be13d75898a9e718eb95b09bb9c9bdf055bd