Fix zooming of the palette in Lazy Fill Tool

The feature was lost when refactoring the palettes

BUG:410997